--- a/src/components/Drawer.css
+++ b/src/components/Drawer.css
@@ -4,6 +4,13 @@ html, body, #root {
   margin: 0;
 }
 
+
+
+#Privacy{
+  display: flex;
+  gap: 04px;
+}
+
 /* Styles for the drawer */
 .drawer {
   position: fixed;
@@ -87,6 +94,10 @@ html, body, #root {
   padding-left: 30px; 
 }
 
+.content-desk{
+  margin: 50px;
+}
+
 .nav-text {
   font-family: 'Degular Display', sans-serif;
   font-size: 18px;
@@ -134,4 +145,18 @@ html, body, #root {
   #social{
     padding-top: 0rem !important;
   }
+}
+
+.Privacy-mob{
+  display: none;
+}
+
+@media (max-width: 768px){
+.Privacy-mob{
+  display: block;
+}
+
+.content-desk{
+  margin: 80px 0px ;
+}
 }
