--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,10 @@
 
 .privacy-text p{
   text-align: left;
-  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 100;
+  letter-spacing: 0.03em;
 }
 
 .privacy-text h1,h2{
@@ -31,15 +34,17 @@
 @media (max-width: 768px){
   .privacy-text p{
     text-align: left;
-    font-weight: 400;
+    font-weight: 100;
     font-size: 15px;
     line-height: 20px;
+    letter-spacing: 0.03em;
   }
   
   .privacy-text h1,h2{
     font-weight: 800;
     font-size: 15px;
     line-height: 20px;
+    letter-spacing: 0.03em;
   }
   }
 
