--- a/src/components/Features.css
+++ b/src/components/Features.css
@@ -23,6 +23,10 @@
   color: white;
   border-radius: 50%;
   cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE */
 }
 
 .project-button-prev::after,
