--- a/src/components/Swipper.css
+++ b/src/components/Swipper.css
@@ -23,6 +23,16 @@
   pointer-events: none; /* Allow clicks to pass through to the swiper */
 }
 
+.banner-slide .swiper-button-next svg path {
+ margin: 0 auto;
+ text-align: center;
+}
+
+.banner-slide .swiper-button-prev svg path {
+  margin: 0 auto;
+  text-align: center;
+ }
+
 /* Position arrows at bottom right */
 .banner-slide .swiper-button-next,
 .banner-slide .swiper-button-prev {
