--- a/src/components/Swipper.css
+++ b/src/components/Swipper.css
@@ -36,35 +36,24 @@
   bottom: 20px;
   margin-top: 0;
   pointer-events: auto; /* Enable clicks */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-
 
 .banner-slide .swiper-button-next {
   right: 60px;
-  text-align: center !important;
-  margin: 0 auto !important;
-  display: flex;
-  justify-content: center !important;
 }
-
-.banner-slide .swiper-button-next svg path {
- margin: 0 auto;
- text-align: center;
-}
-
-.banner-slide .swiper-button-prev svg path {
-  margin: 0 auto;
-  text-align: center;
- }
 
 .banner-slide .swiper-button-prev {
   right: 118px !important;
   left: auto;
-  text-align: center !important;
-  margin: 0 auto !important;
-  display: flex;
-  justify-content: center !important;
+}
+
+.banner-slide .swiper-button-next svg path,
+.banner-slide .swiper-button-prev svg path {
+  margin: 0 auto;
+  text-align: center;
 }
 
 /* Remove default arrow icons */
@@ -88,7 +77,7 @@
 }
 
 .slide {
-  background-size: cover; /* Cover entire slide */
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
@@ -181,6 +170,12 @@
     text-align: left !important;
   }
 
+  .banner-slide .swiper-navigation {
+    display: flex;
+    justify-content: center;
+    bottom: 10px !important;
+  }
+
   .banner-slide .swiper-button-next {
     right: 30px;
   }
@@ -193,16 +188,11 @@
   .banner-slide .swiper-button-prev {
     width: 28px;
     height: 28px;
-    user-select: none; /* Prevent text selection */
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE */
   }
 
   .swiper-button-next:after,
   .swiper-button-prev:after {
     font-size: 0rem;
-    
   }
 
   .swiper-pagination {
@@ -231,8 +221,9 @@
     transform: translateY(-8px);
   }
 
-  .swiper-navigation{
-    bottom: 2%  !important;
+  .swiper-navigation {
+    bottom: 2% !important;
+    justify-content: space-between;
   }
 
   .swiper-pagination-bullet {
