--- a/src/components/Preloader.css
+++ b/src/components/Preloader.css
@@ -30,3 +30,10 @@
     font-size: 24px;
   }
   
+  @media (max-width: 768px) {
+    .preloader-container {
+      width: 40vw !important;
+      height: 40vw !important;
+    }
+  }
+  
