--- a/src/pages/Blog/Blog.css
+++ b/src/pages/Blog/Blog.css
@@ -42,8 +42,16 @@ font-size: 6rem;
     /* Sibgle Grid */
     .single-grid {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         gap: 30px;
+      }
+
+      .no-blogs-message {
+        padding: 20px;
+        font-size: 18px;
+        color: #fff;
+        font-weight: bold;
+        text-align: center;
       }
 
 
@@ -169,7 +177,15 @@ font-size: 6rem;
     margin-bottom: 10px;
     line-height: 25px;
     text-align: left;
+    white-space: pre-line;
   }
+
+  .blog-fulldescription b {
+    font-size: 30px;
+    font-weight: 800;
+    color: #fff;
+  }
+
   
   .blog-meta {
     font-size: 0.8rem;
@@ -219,7 +235,7 @@ font-size: 6rem;
     width: auto;
     min-width: 145px;
     margin-top: 0.02rem;
-    white-space: nowrap;
+    white-space: pre-line;
   }
   
   .category-dropdown ul {
@@ -258,12 +274,34 @@ font-size: 6rem;
    
   }
 
+  .category-dropdown li {
+    padding: 0.5rem 0.6rem;
+    cursor: pointer;
+    transition: background 0.2s;
+  }
+
+  .category-dropdown {
+    z-index: 10;
+    width: 100%;
+
+  }
+
+  .blog-fulldescription b {
+    font-size: 18px;
+    font-weight: 600;
+    color: #fff;
+  }
+
   .first-image{
     height: 210px;
+    object-fit: cover;
+    object-position: center;
   }
 
   .second-image{
     height: 100px;
+    object-fit: cover;
+    object-position: center;
   }
 
   .search-bar{
@@ -334,4 +372,10 @@ font-size: 6rem;
     font-size: 0.8rem;
 }
   }
+
+    .Blog-row{
+      min-height: 50vh;
+      align-items: center;
+    }
+ 
   
