--- a/src/pages/Blog/Blog.css
+++ b/src/pages/Blog/Blog.css
@@ -55,6 +55,10 @@ font-size: 6rem;
       }
 
 
+      .date-text{
+        font-size: 18px;
+    }
+
   
   /* Blog Card */
   .blog-card {
@@ -232,7 +236,7 @@ font-size: 6rem;
     margin-top: 0rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     z-index: 10;
-    width: auto;
+    width: 100%;
     min-width: 145px;
     margin-top: 0.02rem;
     white-space: pre-line;
