--- a/src/pages/Blog/Blog.css
+++ b/src/pages/Blog/Blog.css
@@ -343,9 +343,9 @@ font-size: 6rem;
 }
 
 .blog-title {
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin-bottom: 8px; 
-    line-height: 15px;
+    line-height: 30px !important;
     text-align: left;
     font-weight: 400;
 }
@@ -389,3 +389,4 @@ font-size: 6rem;
     }
  
   
+
