--- a/src/pages/Build Your Facade/build.css
+++ b/src/pages/Build Your Facade/build.css
@@ -109,6 +109,12 @@
   display: block;
 }
 
+@media (min-width:768px) {
+  .form-project .form-check-label{
+    font-size: 23px !important;
+  }
+}
+
 /* Responsive Styles */
 @media (max-width: 768px) {
   .flex-column {
